# eros-cli-c

./: CMakeLists.txt  eros_cli.c  eros_cli.h  eros_cli_demo.c  eros_cli_demo.h
drv_esp/: eros_cli_esp_commands.h  eros_cli_esp_log_commands.c  eros_cli_esp_network_commands.c  eros_cli_esp_nvs_commands.c  eros_cli_esp_system_commands.c
